hphp/test/zend/good/zend/unset_cv04.php
<?php
function f() {
  $x = "ok\n";
  echo $x;
  include "unset.inc";
  echo $x;
}
f();
?>